vitest eslint plugin; configuration tweaks

--- a/package.json
+++ b/package.json
@@ -77,13 +77,13 @@
         "@typescript-eslint/parser": "^8.26.1",
         "@vitejs/plugin-react": "^4.3.4",
         "@vitest/coverage-v8": "^3.0.8",
+        "@vitest/eslint-plugin": "^1.1.37",
         "autoprefixer": "^10.4.21",
         "cross-env": "^7.0.3",
         "eslint": "9.22",
         "eslint-config-prettier": "^10.1.1",
         "eslint-import-resolver-typescript": "^3.8.5",
         "eslint-plugin-import": "^2.31.0",
-        "eslint-plugin-jest": "28.11",
         "eslint-plugin-jsx-a11y": "^6.10.2",
         "eslint-plugin-only-error": "^1.0.2",
         "eslint-plugin-prettier": "^5.2.3",
