--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
         "eslint:fix": "eslint . --fix -c eslint.config.js --report-unused-disable-directives",
         "stylelint": "stylelint **/*.scss **/*.css",
         "lint": "npm run eslint && npm run stylelint",
-        "open:dist": "http-server dist --port 4000 --proxy http://localhost:4000?",
+        "preview": "vite preview",
         "postinstall": "husky init",
         "tsc": "tsc",
         "test": "vitest run",
@@ -93,7 +93,6 @@
         "eslint-plugin-unused-imports": "^4.1.4",
         "globals": "^16.0.0",
         "html-webpack-plugin": "^5.6.3",
-        "http-server": "^14.1.1",
         "husky": "^9.1.7",
         "jsdom": "^26.0.0",
         "postcss-flexbugs-fixes": "^5.0.2",
@@ -111,6 +110,7 @@
         "typescript": "^5.8.2",
         "typescript-eslint": "^8.26.1",
         "vite": "^6.2.1",
+        "vite-css-modules": "^1.8.4",
         "vite-tsconfig-paths": "^5.1.4",
         "vitest": "^3.0.8"
     }
