redundant eslint param removed

--- a/package.json
+++ b/package.json
@@ -18,8 +18,8 @@
         "build": "cross-env NODE_ENV=production vite build",
         "build:skip": "cross-env NODE_ENV=production vite build",
         "build:analyze": "cross-env ANALYZE=true vite build",
-        "eslint": "eslint . -c eslint.config.js --report-unused-disable-directives",
-        "eslint:fix": "eslint . --fix -c eslint.config.js --report-unused-disable-directives",
+        "eslint": "eslint . -c eslint.config.js",
+        "eslint:fix": "eslint . --fix -c eslint.config.js",
         "stylelint": "stylelint **/*.scss **/*.css",
         "lint": "npm run eslint && npm run stylelint",
         "preview": "vite preview",
