--- a/package.json
+++ b/package.json
@@ -13,10 +13,10 @@
     },
     "homepage": "https://github.com/Tenemo/reactplate#readme",
     "scripts": {
-        "dev": "cross-env NODE_ENV=development vite",
+        "dev": "vite",
         "prebuild": "npm run lint && npm run tsc && npm test",
-        "build": "cross-env NODE_ENV=production vite build",
-        "build:skip": "cross-env NODE_ENV=production vite build",
+        "build": "vite build",
+        "build:skip": "vite build",
         "build:analyze": "cross-env ANALYZE=true vite build",
         "eslint": "eslint . -c eslint.config.js",
         "eslint:fix": "eslint . --fix -c eslint.config.js",
