--- a/package.json
+++ b/package.json
@@ -106,6 +106,7 @@
     "typescript-eslint": "^8.26.1",
     "vite": "^6.2.1",
     "vite-css-modules": "^1.8.4",
+    "vite-plugin-static-copy": "^2.3.0",
     "vite-tsconfig-paths": "^5.1.4",
     "vitest": "^3.0.8"
   }
