--- a/package.json
+++ b/package.json
@@ -41,6 +41,8 @@
     "type": "module",
     "dependencies": {
         "@dr.pogodin/react-helmet": "^2.0.4",
+        "@emotion/styled": "^11.14.0",
+        "@mui/icons-material": "^6.4.8",
         "@reduxjs/toolkit": "^2.6.1",
         "@sentry/browser": "^9.5.0",
         "@sentry/react": "^9.5.0",
