--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
         "@vitest/eslint-plugin": "^1.1.37",
         "autoprefixer": "^10.4.21",
         "cross-env": "^7.0.3",
+        "cssnano": "^7.0.6",
         "eslint": "9.22",
         "eslint-config-prettier": "^10.1.1",
         "eslint-import-resolver-typescript": "^3.8.5",
