--- a/package.json
+++ b/package.json
@@ -30,8 +30,7 @@
         "prepare": "husky"
     },
     "browserslist": [
-        "> 0.5%",
-        "not dead",
+        "> 1%",
         "not IE > 0",
         "not op_mini all"
     ],
@@ -76,6 +75,7 @@
         "@vitest/coverage-v8": "^3.0.8",
         "@vitest/eslint-plugin": "^1.1.37",
         "autoprefixer": "^10.4.21",
+        "browserslist-to-esbuild": "^2.1.1",
         "cross-env": "^7.0.3",
         "cssnano": "^7.0.6",
         "eslint": "9.22",
