--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "version": "2.1.0",
     "author": "Piotr Piech <piotr@piech.dev>",
     "license": "MIT",
-    "description": "A React + modern Redux (RTK) boilerplate for a fully configured quick start with automatic formatting and linting with ESLint & Prettier.",
+    "description": "A React + modern Redux (RTK) boilerplate for a fully configured quick start with automatic formatting and linting with ESLint & Prettier. VS Code settings bundled with the boilerplate, including recommended extensions for automatic formatting  via a one-click install. Scores perfect 100/100/100/100 score in Chrome Lighthouse.",
     "repository": {
         "type": "git",
         "url": "git+https://github.com/Tenemo/reactplate.git"
