--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "engines": {
         "node": ">=20.11.0"
     },
+    "private": true,
     "type": "module",
     "dependencies": {
         "@dr.pogodin/react-helmet": "^3.0.1",
