--- a/package.json
+++ b/package.json
@@ -18,8 +18,8 @@
         "build": "vite build",
         "build:skip": "vite build",
         "build:analyze": "cross-env ANALYZE=true vite build",
-        "eslint": "eslint . -c eslint.config.js",
-        "eslint:fix": "eslint . --fix -c eslint.config.js",
+        "eslint": "eslint .",
+        "eslint:fix": "eslint . --fix",
         "stylelint": "stylelint **/*.scss **/*.css",
         "lint": "npm run eslint && npm run stylelint",
         "preview": "vite preview",
@@ -70,7 +70,6 @@
         "@types/react-router": "^5.1.20",
         "@types/react-router-dom": "^5.3.3",
         "@types/redux-logger": "^3.0.13",
-        "@typescript-eslint/parser": "^8.29.1",
         "@vitejs/plugin-react": "^4.3.4",
         "@vitest/coverage-v8": "^3.1.1",
         "@vitest/eslint-plugin": "^1.1.39",
@@ -108,7 +107,6 @@
         "typescript-eslint": "^8.29.1",
         "vite": "^6.2.5",
         "vite-css-modules": "^1.8.4",
-        "vite-plugin-static-copy": "^2.3.0",
         "vite-tsconfig-paths": "^5.1.4",
         "vitest": "^3.1.1"
     }
